[metadata]
name = tempest
summary = OpenStack Integration Testing
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/tempest/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    tempest
data_files =
    etc/tempest = etc/*

[entry_points]
console_scripts =
    verify-tempest-config = tempest.cmd.verify_tempest_config:main
    javelin2 = tempest.cmd.javelin:main
    run-tempest-stress = tempest.cmd.run_stress:main
    tempest-cleanup = tempest.cmd.cleanup:main
    tempest-account-generator = tempest.cmd.account_generator:main
    tempest = tempest.cmd.main:main
    skip-tracker = tempest.lib.cmd.skip_tracker:main
    check-uuid = tempest.lib.cmd.check_uuid:run
tempest.cm =
    account-generator = tempest.cmd.account_generator:TempestAccountGenerator
    init = tempest.cmd.init:TempestInit
    cleanup = tempest.cmd.cleanup:TempestCleanup
    run-stress = tempest.cmd.run_stress:TempestRunStress
    list-plugins = tempest.cmd.list_plugins:TempestListPlugins
    verify-config = tempest.cmd.verify_tempest_config:TempestVerifyConfig
    workspace = tempest.cmd.workspace:TempestWorkspace
    run = tempest.cmd.run:TempestRun
oslo.config.opts =
    tempest.config = tempest.config:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
