[metadata]
name = tempest
summary = OpenStack Integration Testing
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/tempest/latest/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    tempest
data_files =
    etc/tempest = etc/*

[entry_points]
console_scripts =
    verify-tempest-config = tempest.cmd.verify_tempest_config:main
    tempest-account-generator = tempest.cmd.account_generator:main
    tempest = tempest.cmd.main:main
    skip-tracker = tempest.lib.cmd.skip_tracker:main
    check-uuid = tempest.lib.cmd.check_uuid:run
    subunit-describe-calls = tempest.cmd.subunit_describe_calls:entry_point
tempest.cm =
    account-generator = tempest.cmd.account_generator:TempestAccountGenerator
    init = tempest.cmd.init:TempestInit
    cleanup = tempest.cmd.cleanup:TempestCleanup
    list-plugins = tempest.cmd.list_plugins:TempestListPlugins
    verify-config = tempest.cmd.verify_tempest_config:TempestVerifyConfig
    workspace_register = tempest.cmd.workspace:TempestWorkspaceRegister
    workspace_rename = tempest.cmd.workspace:TempestWorkspaceRename
    workspace_move = tempest.cmd.workspace:TempestWorkspaceMove
    workspace_remove = tempest.cmd.workspace:TempestWorkspaceRemove
    workspace_list = tempest.cmd.workspace:TempestWorkspaceList
    run = tempest.cmd.run:TempestRun
oslo.config.opts =
    tempest.config = tempest.config:list_opts

[wheel]
universal = 1
